--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: alarm_pasien
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
@@ -9,6 +9,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  get: 4.6.6
+  bottom_bar: ^2.0.3
+  font_awesome_flutter: ^10.7.0
+  firebase_core: ^3.6.0
+  firebase_database:
 
 dev_dependencies:
   flutter_test:
@@ -17,3 +22,13 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/fonts/
+    - assets/images/
+
+  # fonts:
+  #   - family: NunitoSans
+  #     fonts:
+  #       - asset: assets/fonts/NunitoSans_10pt-Regular.ttf
+  #       - asset: assets/fonts/NunitoSans_10pt-Bold.ttf
+  #         weight: 700
